# wagtail-headless-preview

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  manage.py  pyproject.toml  ruff.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml  ruff.yml  test.yml
src/wagtail_headless_preview/: __init__.py  apps.py  deprecation.py  models.py  settings.py  signals.py  wagtail_hooks.py
src/wagtail_headless_preview/migrations/: 0001_initial.py
src/wagtail_headless_preview/static/js/: live-preview.js
tests/: settings.py  test_frontend.py  test_settings.py  urls.py
tests/client/: index.html
tests/testapp/: __init__.py  api.py  apps.py  models.py
tests/testapp/fixtures/: test.json
tests/testapp/migrations/: 0001_initial.py  0002_headlesspage.py
wagtail_headless_preview/: __init__.py  apps.py  deprecation.py  models.py  settings.py  signals.py  wagtail_hooks.py
wagtail_headless_preview/migrations/: 0001_initial.py
wagtail_headless_preview/tests/: settings.py  test_frontend.py  test_settings.py  urls.py
wagtail_headless_preview/tests/client/: index.html
wagtail_headless_preview/tests/testapp/: api.py  models.py
wagtail_headless_preview/tests/testapp/migrations/: 0001_initial.py  0002_headlesspage.py
wagtail_headless_preview/tests/testapp/templates/tests/: simple_page.html
